@@ -8,9 +8,9 @@ Authors@R: c(person("Laurent", "Gatto", role = c("aut", "cre"),
                     email = "mail@sebastiangibb.de"))
 Depends: R (>= 2.10), methods, BiocGenerics, Rcpp, Gviz
 Imports: cleaver (>= 1.3.6), Biobase, Biostrings, IRanges, S4Vectors,
-	 mzID, mzR (>= 1.99.1), MSnbase (>= 1.15.5), Pviz
+	 mzID, mzR (>= 1.99.1), MSnbase (>= 1.15.5), Pviz, biomaRt
 Suggests: testthat (>= 0.8), ggplot2, BSgenome.Hsapiens.NCBI.GRCh38,
-	  biomaRt, TxDb.Hsapiens.UCSC.hg38.knownGene, rtracklayer,
+	  TxDb.Hsapiens.UCSC.hg38.knownGene, rtracklayer,
 	  AnnotationHub, knitr, rmarkdown, BiocStyle
 Description: A set of classes and functions to investigate and
              understand protein sequence data in the context of a
