@@ -3,13 +3,13 @@
   stop(deparse(parentCall), " is not implemented yet!", call.=FALSE)
 }
 
-#' @param x data.frame
-#' @param column name of the column
-#' @param content content to insert into the new x[, column]
-#' @param force if TRUE it overwrites an existing column otherwise an error is
-#' thrown
-#' @return x with the new column "column"
-#' @noRd
+##' @param x data.frame
+##' @param column name of the column
+##' @param content content to insert into the new x[, column]
+##' @param force if TRUE it overwrites an existing column otherwise an
+##' error is thrown
+##' @return x with the new column "column"
+##' @noRd
 .addColumn <- function(x, column, content, force = FALSE) {
   stopifnot(inherits(x, "data.frame") || inherits(x, "DataFrame"))
   stopifnot(is.character(column) && nchar(column) > 0L)
@@ -24,11 +24,11 @@
   x
 }
 
-#' test whether a given vector is in the range from:to
-#' @param x numeric
-#' @param range numeric, lengh == 2
-#' @return logical of length(x)
-#' @noRd
+##' test whether a given vector is in the range from:to
+##' @param x numeric
+##' @param range numeric, lengh == 2
+##' @return logical of length(x)
+##' @noRd
 .isInRange <- function(x, range) {
     stopifnot(is.numeric(range) && length(range) == 2L)
     if (range[1L] > range[2L]) {
@@ -37,13 +37,14 @@
     range[1L] <= x & x <= range[2L]
 }
 
-#' @param x IRangesList
-#' @param shift if TRUE the IRanges will shift (similar to AAStringSet@ranges)
-#' @param shiftBy if shift TRUE and shiftBy it is used to shift the IRanges,
-#' lenght must be equal to 1 or the length of x
-#' @return an IRanges similar to AAStringSet's @ranges slot (an AAStringSet is
-#' just a long "character" vector with ranges)
-#' @noRd
+##' @param x IRangesList
+##' @param shift if TRUE the IRanges will shift (similar to
+##' AAStringSet@@ranges)
+##' @param shiftBy if shift TRUE and shiftBy it is used to shift the IRanges,
+##' lenght must be equal to 1 or the length of x
+##' @return an IRanges similar to AAStringSet's ranges slot (an AAStringSet is
+##' just a long "character" vector with ranges)
+##' @noRd
 .flatIRangesList <- function(x, shift = FALSE, shiftBy) {
   stopifnot(is(x, "IRangesList"))
   if (shift) {
@@ -55,11 +56,11 @@
   unlist(x)
 }
 
-#' @param x IRanges
-#' @param f defines the grouping (see ?split)
-#' @param unshift if TRUE the IRanges will shift back to start with 1L
-#' @return a IRangesList
-#' @noRd
+##' @param x IRanges
+##' @param f defines the grouping (see ?split)
+##' @param unshift if TRUE the IRanges will shift back to start with 1L
+##' @return a IRangesList
+##' @noRd
 .splitIRanges <- function(x, f = seq_along(x), unshift = FALSE) {
   stopifnot(is(x, "IRanges"))
   x <- split(unname(x), f)
@@ -71,12 +72,12 @@
   x
 }
 
-#' setNames2 is similar to setNames but uses the names of the second
-#' argument if they are available
-#' @param object object to give names to
-#' @param nm names/object with names
-#' @return named object
-#' @noRd
+##' setNames2 is similar to setNames but uses the names of the second
+##' argument if they are available
+##' @param object object to give names to
+##' @param nm names/object with names
+##' @return named object
+##' @noRd
 .setNames2 <- function(object, nm) {
     if (is.null(names(nm))) {
         names(object) <- as.character(nm)
@@ -86,10 +87,10 @@
     object
 }
 
-#' splits a sequence into single AA
-#' @param x character, AAString, AAStringSet
-#' @return list of single characters
-#' @noRd
+##' Splits a sequence into single AA
+##' @param x character, AAString, AAStringSet
+##' @return list of single characters
+##' @noRd
 .singleAA <- function(x) {
     if (is(x, "AAStringSetList")) {
         x <- unlist(x)
@@ -102,11 +103,12 @@
     strsplit(x, split = character(), fixed = TRUE)
 }
 
-#' in contrast to base::unique this function removes all duplicated values and
-#' keeps only singular ones. base::unique keeps one copy of each duplicate.
-#' @param x vector
-#' @return reduced x
-#' @noRd
+##' In contrast to base::unique this function removes all duplicated
+##' values and keeps only singular ones. base::unique keeps one copy
+##' of each duplicate.
+##' @param x vector
+##' @return reduced x
+##' @noRd
 .singular <- function(x) {
     x[! (duplicated(x) | duplicated(x, fromLast = TRUE))]
 }
