@@ -1,6 +1,8 @@
 CHANGES IN VERSION 0.6.0
 ------------------------
  o fixed typos in vigs [2015-02-12 Thu]
+ o new etrid2gr function to convert Ensembl transcript identifiers to
+   GRanges objects [2015-02-13 Fri]
  
 CHANGES IN VERSION 0.5.5
 ------------------------
